Adds a plot synopsis to The Post (thinking of taking this down later)

--- a/_posts/2018-09-17-the-post.md
+++ b/_posts/2018-09-17-the-post.md
@@ -7,6 +7,10 @@ author: "Avery Pierce"
 
 It’s difficult to make a suspenseful movie about true events, when it’s obvious to everyone how the story will end. Sadly, *The Post* does not rise to the challenge.
 
+> **Synopsis**: In 1971, The New York Times has access to classified documents about the Vietnam War. However, the government uses the justice department to stop the distribution of newspapers claiming violation of the national security laws. Immediately after, the Washington Post has access to similar documents but they decide to face the government and publish the newspapers against the will of their lawyers and investors.
+> 
+> *- Claudio Carvalho, Rio de Janeiro, Brazil*
+
 Both *The Washington Post* and *The New York Times* not only remain in business, but they are perhaps the most well-known and respected news publications in the United States today. Despite its best efforts, *The Post* was never able to draw me in enough to make me forget how the story was destined to end.
 
 On more than one occasion, the movie builds up dramatic tension about an article that may or may not get published, but then whiffs the payoff with a plain-looking front page and a headline you nearly have to squint to read on the screen. I suppose the newsprint needs to be historically accurate, and maybe I’ve been spoiled by headlines that were embellished for dramatic effect, but I felt unfulfilled by every climactic reveal of the *The Washington Post*’s front page.
